[package]
name = "wq"
version = "0.1.0"
authors = ["Matthias Holetzko <mholetzko@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rpi-led-matrix = "0.2.2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3